--- a/src/app/shared/app-template/header/header.component.html
+++ b/src/app/shared/app-template/header/header.component.html
@@ -40,9 +40,25 @@
                                                 <a class="hover-underline" [routerLink]="['/financial-transactions']">{{ 'financial-transactions' | translate }}</a>
                                             </li>
 
+                                             <li routerLinkActive="active"> 
+                                                <a  class="hover-underline" [routerLink]="['/payment']">{{ "payment.payment" | translate }} </a>
+                                            </li>
+
+
                                             <li routerLinkActive="active"> 
                                                 <a  class="hover-underline"  [routerLink]="['/reports']">{{ 'reports' | translate }} </a>
                                             </li>
+
+                                             <li routerLinkActive="active"> 
+                                                <a  class="hover-underline" [routerLink]="['/teachersTracking']">{{ 'tracking.tracking' | translate }} </a>
+                                            </li>
+
+                                             <li routerLinkActive="active"> 
+                                                <a  class="hover-underline" [routerLink]="['/communication']">{{ 'communication.communication' | translate }} </a>
+                                            </li>
+
+
+                                            
 
                                             <!-- Button -->
                                             <!-- <li class="button-header margin-left "><a href="#" class="btn">Join</a></li> -->
