--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -19,6 +19,7 @@
        [dataFactory]="teacherCourseDataFactory"
        [apiPath]="'teacherCourses'"
        (rowSelected)="onTeacherCourseSelected($event)"
+       [exportToExcelFl]="true"
        >
       </app-generic-table>
     </app-custom-accordion>
@@ -56,7 +57,8 @@
                 [apiPath]="'classes'"
                 [selectedId]="selectedCourse?.teacherCoursePk"
                 [searchParameterKey]="'teacherCourseFk'"
-                (rowSelected)="onClassSelected($event)">
+                (rowSelected)="onClassSelected($event)"
+                [exportToExcelFl]="true">
               </app-generic-table>
           </mat-tab>
           <mat-tab label='{{"TeacherCourse.students" | translate}}' >
@@ -68,7 +70,8 @@
                 [apiPath]="'courseStudents'"
                 [selectedId]="selectedCourse?.teacherCoursePk"
                 [searchParameterKey]="'teacherCourseFk'"
-                [isEditableTable]="true">
+                [isEditableTable]="true"
+                [exportToExcelFl]="true">
               </app-generic-table>
           </mat-tab>
         </mat-tab-group>
@@ -102,7 +105,8 @@
                   [apiPath]="'studentAttendanceClasses'"
                   [searchParameterKey]="'classFk'"
                   [selectedId]="selectedClass?.classPk"
-                  [isEditableTable]="true">
+                  [isEditableTable]="true"
+                  [exportToExcelFl]="true">
                 </app-generic-table>
           </mat-tab>
         </mat-tab-group>
