--- a/src/app/shared/app-template/header/header.component.html
+++ b/src/app/shared/app-template/header/header.component.html
@@ -83,7 +83,10 @@
                                 <li><a [routerLink]="['/users']" (click)="closeMobileMenu()">{{ 'users' | translate }}</a></li>
                                 <li><a [routerLink]="['/system-lookups']" (click)="closeMobileMenu()">{{ 'systemLookups' | translate }}</a></li>
                                 <li><a [routerLink]="['/financial-transactions']" (click)="closeMobileMenu()">{{ 'financial-transactions' | translate }}</a></li>
+                                <li><a [routerLink]="['/payment']" (click)="closeMobileMenu()">{{ 'payment.payment' | translate }}</a></li>
                                 <li><a [routerLink]="['/reports']" (click)="closeMobileMenu()">{{ 'reports' | translate }}</a></li>
+                                <li><a [routerLink]="['/teachersTracking']" (click)="closeMobileMenu()">{{ 'tracking.tracking' | translate }}</a></li>
+                                <li><a [routerLink]="['/communication']" (click)="closeMobileMenu()">{{ 'communication.communication' | translate }}</a></li>
                                 <li>
                                     <a (click)="handleLogoutClick(); closeMobileMenu()">
                                     {{ 'logout' | translate }}
