--- a/src/app/shared/components/table-components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/table-components/generic-table/generic-table.component.html
@@ -35,7 +35,7 @@
           *ngIf="enableSaveAll"  
           [label]="'payment.pay'"
           [imageSrc]="'/assets/img/icon/save.svg'"
-          [onClick]="saveAll"
+          [onClick]="confirmSaveAllForPyments"
           [disabled]="buttonDisabled['updateAll'] || selectedRows.length===0">
       </app-button>
 
